<resources>
    <string name="app_name">BaseballRoulette</string>
    <string name="startBtn">Start</string>
    <string name="settingsBtn">Settings</string>
    <string name="scoresBtn">Leaderboard</string>
    <string name="titleTxt">Welcome to Baseball Roulette!</string>
    <string name="swingBtn">Swing!</string>
    <string name="stopWheelBtn">Stop!</string>
    <string name="startWheelBtn">Spin the Wheel!</string>
    <string name="homeScoreTxt"></string>
    <string name="awayScoreTxt"></string>
    <string name="homeLabel">HOME</string>
    <string name="awayLabel">AWAY</string>
    <string name="outsLabel">OUTS</string>
    <string name="inningLabel">INNING</string>
    <string name="battingLabel">BATTING</string>
    <string name="hitTypeLabel">Last Swing:</string>
    <string name="homeStatsLabel">Home Stats</string>
    <string name="awayStatsLabel">Away Stats </string>
    <string name="singlesLabel">Singles</string>
    <string name="runsLabel">Runs Scored</string>
    <string name="averageLabel">BA.</string>
    <string name="doublesLabel">Doubles</string>
    <string name="triplesLabel">Triples</string>
    <string name="homerunsLabel">Home Runs</string>
    <string name="playAgainBtn">Play Again!</string>
    <string name="menuBtn">Back To Menu</string>
</resources>