<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePage">

    <TextView
        android:id="@+id/awayScoreTxt"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:layout_marginBottom="80dp"
        android:text="@string/awayScoreTxt"
        app:layout_constraintBottom_toTopOf="@+id/field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/awayLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/awayLabel"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="80dp"
        android:text="@string/awayLabel"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/field"
        app:layout_constraintEnd_toStartOf="@+id/awayScoreTxt"
        app:layout_constraintStart_toEndOf="@+id/homeLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/swingBtn"
        android:layout_width="159dp"
        android:layout_height="96dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="225dp"
        android:layout_marginRight="225dp"
        android:layout_marginBottom="16dp"
        android:text="@string/swingBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field" />

    <ImageView
        android:id="@+id/field"
        android:layout_width="378dp"
        android:layout_height="429dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/field" />

    <TextView
        android:id="@+id/homeScoreTxt"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:layout_marginBottom="80dp"
        android:text="@string/homeScoreTxt"
        app:layout_constraintBottom_toTopOf="@+id/field"
        app:layout_constraintEnd_toStartOf="@+id/homeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeLabel"
        android:layout_width="78dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:layout_marginBottom="80dp"
        android:text="@string/homeLabel"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/field"
        app:layout_constraintEnd_toStartOf="@+id/awayLabel"
        app:layout_constraintStart_toEndOf="@+id/homeScoreTxt"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>