<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostGame">

    <TextView
        android:id="@+id/homeStatsLabel"
        android:layout_width="210dp"
        android:layout_height="114dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="664dp"
        android:background="#000000"
        android:gravity="center_vertical"
        android:text="@string/homeStatsLabel"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/awayStatsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/awayStatsLabel"
        android:layout_width="210dp"
        android:layout_height="114dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="667dp"
        android:background="#000000"
        android:gravity="right|center_vertical"
        android:text="@string/awayStatsLabel"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homeStatsLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471" />

    <TextView
        android:id="@+id/runsLabel"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/runsLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hitsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeStatsLabel" />

    <TextView
        android:id="@+id/hitsLabel"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/averageLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/averageLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runsLabel" />

    <TextView
        android:id="@+id/averageLabel"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/singlesLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/singlesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hitsLabel" />

    <TextView
        android:id="@+id/singlesLabel"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/doublesLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/doublesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/averageLabel" />

    <TextView
        android:id="@+id/doublesLabel"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/triplesLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/triplesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlesLabel" />

    <TextView
        android:id="@+id/triplesLabel"
        android:layout_width="131dp"
        android:layout_height="91dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:layout_marginBottom="91dp"
        android:background="#000000"
        android:gravity="center"
        android:text="@string/homerunsLabel"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doublesLabel" />

    <TextView
        android:id="@+id/homeRunsLabel"
        android:layout_width="140dp"
        android:layout_height="93dp"
        android:background="#7E0000"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homeBALabel"
        app:layout_constraintEnd_toStartOf="@+id/runsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeStatsLabel" />

    <TextView
        android:id="@+id/homeBALabel"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:background="#7C7C7C"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homeSInglesLabel"
        app:layout_constraintEnd_toStartOf="@+id/hitsLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeRunsLabel" />

    <TextView
        android:id="@+id/homeSInglesLabel"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:background="#7E0000"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/averageLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBALabel" />

    <TextView
        android:id="@+id/homeDoublesLabel"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:background="#7C7C7C"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homeTriplesLabel"
        app:layout_constraintEnd_toStartOf="@+id/singlesLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeSInglesLabel" />

    <TextView
        android:id="@+id/homeTriplesLabel"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:background="#7E0000"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/homeHomeRunsLabel"
        app:layout_constraintEnd_toStartOf="@+id/doublesLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeDoublesLabel" />

    <TextView
        android:id="@+id/homeHomeRunsLabel"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:layout_marginBottom="89dp"
        android:background="#7C7C7C"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/triplesLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTriplesLabel" />

    <TextView
        android:id="@+id/aRunsLabel"
        android:layout_width="140dp"
        android:layout_height="92dp"
        android:background="#7E0000"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/aBALabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/runsLabel"
        app:layout_constraintTop_toBottomOf="@+id/awayStatsLabel" />

    <TextView
        android:id="@+id/aBALabel"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:background="#7C7C7C"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/aSinglesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hitsLabel"
        app:layout_constraintTop_toBottomOf="@+id/aRunsLabel" />

    <TextView
        android:id="@+id/aSinglesLabel"
        android:layout_width="140dp"
        android:layout_height="92dp"
        android:background="#7E0000"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/aDoublesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/averageLabel"
        app:layout_constraintTop_toBottomOf="@+id/aBALabel" />

    <TextView
        android:id="@+id/aDoublesLabel"
        android:layout_width="140dp"
        android:layout_height="92dp"
        android:background="#7C7C7C"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/aTriplesLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/singlesLabel"
        app:layout_constraintTop_toBottomOf="@+id/aSinglesLabel" />

    <TextView
        android:id="@+id/aTriplesLabel"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:background="#7E0000"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/aHomeRunsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/doublesLabel"
        app:layout_constraintTop_toBottomOf="@+id/aDoublesLabel" />

    <TextView
        android:id="@+id/aHomeRunsLabel"
        android:layout_width="140dp"
        android:layout_height="91dp"
        android:layout_marginBottom="88dp"
        android:background="#7C7C7C"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/triplesLabel"
        app:layout_constraintTop_toBottomOf="@+id/aTriplesLabel" />

    <Button
        android:id="@+id/playAgainBtn"
        android:layout_width="220dp"
        android:layout_height="107dp"
        android:gravity="center"
        android:text="@string/playAgainBtn"
        android:textColor="#7E0000"
        android:textSize="30sp"
        app:backgroundTint="#F6F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menuBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeHomeRunsLabel" />

    <Button
        android:id="@+id/menuBtn"
        android:layout_width="211dp"
        android:layout_height="107dp"
        android:gravity="center"
        android:text="@string/menuBtn"
        android:textColor="#7E0000"
        android:textSize="30sp"
        app:backgroundTint="#F6F6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playAgainBtn"
        app:layout_constraintTop_toBottomOf="@+id/triplesLabel"
        app:layout_constraintVertical_bias="0.375" />

</androidx.constraintlayout.widget.ConstraintLayout>